// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal matches snapshot 1`] = `
.c0 {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: rgba(0,0,0,0.4);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

<div
  className="c0"
/>
`;

exports[`Posts matches snapshot 1`] = `
.c0 {
  display: grid;
  grid-gap: 4px;
  grid-template-columns: repeat(3,1fr);
  grid-auto-rows: auto;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
}

.c1 {
  max-width: 100%;
  object-fit: cover;
}

@media (min-width:768px) {
  .c0 {
    grid-gap: 10px;
  }
}

<div
  className="c0"
>
  <img
    className="c1"
    src="https://instagram.fsjj1-1.fna.fbcdn.net/vp/d290920f9a938d426f6edd3bfdf3a4e0/5BAB4F61/t51.2885-15/e35/33630509_2122355564708396_6000352995101900800_n.jpg"
  />
  <img
    className="c1"
    src="https://instagram.fsjj1-1.fna.fbcdn.net/vp/61faee47738a31b77346f3d524354d18/5BB89C6E/t51.2885-15/e35/33177999_204623263489562_6594454715688288256_n.jpg"
  />
</div>
`;

exports[`Posts(no posts) matches snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 20px 0;
}

<div
  className="c0"
>
  No posts yet
</div>
`;
